fixed item focus
Added padding to list focus items
Fixed scroll on keyboard navigation
Fixed auto-hight elements to remove additional scrollbar

--- a/apps/jetstream/src/main.scss
+++ b/apps/jetstream/src/main.scss
@@ -66,6 +66,7 @@
 
 .slds-item {
   cursor: pointer;
+  margin: 1px;
   &:hover {
     background-color: $color-background;
   }
